# infralink

./: .gitignore  BACKLOG.md  PRD.md  README.md  conftest.py  pyproject.toml
examples/: edges.yml  registry.yml  roles.yml
src/infralink/: __init__.py
src/infralink/cli/: __init__.py  analyze.py  check.py  diagram.py  docs.py  main.py  resolve.py  validate.py
src/infralink/core/: __init__.py  edges.py  registry.py  resolver.py  schema.py
src/infralink/generators/: __init__.py  d2.py  dot.py  markdown.py  mermaid.py
src/infralink/health/: __init__.py  checks.py
tests/: __init__.py  test_edges.py  test_registry.py  test_resolver.py
